<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telaesqueceusenha"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEE9FA"
    tools:context=".EsqueceuSenha" >

    <ImageView
        android:id="@+id/imageView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/detalheesqueceusenha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/esqueceusenha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/caixaesqueceusenha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <Button
        android:id="@+id/btnDefinirSenha"
        android:layout_width="269dp"
        android:layout_height="59dp"
        android:backgroundTint="#85B6FF"
        android:text="@string/txtDefinirSenhaEsqueceuSenha"
        android:onClick="telaLogin"
        app:layout_constraintBottom_toBottomOf="@+id/imageView70"
        app:layout_constraintEnd_toEndOf="@+id/imageView70"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/imageView70"
        app:layout_constraintTop_toTopOf="@+id/imageView70"
        app:layout_constraintVertical_bias="0.895" />

    <EditText
        android:id="@+id/edtEmailEsqueceuSenha"
        android:layout_width="228dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtCriarContaEmail"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView70"
        app:layout_constraintEnd_toEndOf="@+id/imageView70"
        app:layout_constraintStart_toStartOf="@+id/imageView70"
        app:layout_constraintTop_toTopOf="@+id/imageView70"
        app:layout_constraintVertical_bias="0.14" />

    <EditText
        android:id="@+id/edtNovaSenha"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/txtNovaSenhaEsqueceuSenha"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView70"
        app:layout_constraintEnd_toEndOf="@+id/imageView70"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/imageView70"
        app:layout_constraintTop_toTopOf="@+id/imageView70"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/edtConfirmarSenha"
        android:layout_width="219dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/txtConfirmarEsqueceuSenha"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView70"
        app:layout_constraintEnd_toEndOf="@+id/imageView70"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="@+id/imageView70"
        app:layout_constraintTop_toTopOf="@+id/imageView70"
        app:layout_constraintVertical_bias="0.598" />
</androidx.constraintlayout.widget.ConstraintLayout>