<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".Recebimentotransacaoaprovada">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibtnAddFavoritos2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ECECEC"
                android:src="@drawable/botaoaddfavoritos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.776" />

            <ImageView
                android:id="@+id/imageView84"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.776"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.019"
                app:srcCompat="@drawable/simboloperfil" />

            <TextView
                android:id="@+id/txtremetente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtconfirmacaorecebimentotransacaoremetente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.487" />

            <TextView
                android:id="@+id/txtnomeremente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtnotificacaopessoanome1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.527" />

            <TextView
                android:id="@+id/txtvalorNumerico2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtconfirmacaorecebimentotransacaovalor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.617" />

            <TextView
                android:id="@+id/txtvalor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtvalor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.575" />

            <Button
                android:id="@+id/btnVoltar2"
                android:layout_width="336dp"
                android:layout_height="57dp"
                android:backgroundTint="#E6BDFF"
                android:text="@string/btnvoltar"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="telaNotificacao"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.886" />

            <TextView
                android:id="@+id/txtAddFavoritos2"
                android:layout_width="84dp"
                android:layout_height="32dp"
                android:text="@string/btnaddfavoritos"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/ibtnAddFavoritos2"
                app:layout_constraintEnd_toEndOf="@+id/ibtnAddFavoritos2"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/ibtnAddFavoritos2"
                app:layout_constraintTop_toTopOf="@+id/ibtnAddFavoritos2"
                app:layout_constraintVertical_bias="0.794" />

            <ImageButton
                android:id="@+id/ibtnEnviarMensagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ECECEC"
                android:src="@drawable/btnenviarmensagem"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.146"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.777" />

            <TextView
                android:id="@+id/txtEnviarmensagem"
                android:layout_width="90dp"
                android:layout_height="47dp"
                android:text="@string/txtconfirmacaorecebimentotransacaoenviar"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/ibtnEnviarMensagem"
                app:layout_constraintEnd_toEndOf="@+id/ibtnEnviarMensagem"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/ibtnEnviarMensagem"
                app:layout_constraintTop_toTopOf="@+id/ibtnEnviarMensagem"
                app:layout_constraintVertical_bias="0.983" />

            <ImageView
                android:id="@+id/imageView55"
                android:layout_width="118dp"
                android:layout_height="121dp"
                android:src="@drawable/fotoremetente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.345" />

            <ImageButton
                android:id="@+id/ibtnBaixarRecibo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ECECEC"
                android:src="@drawable/botaorecibo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.853"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.777" />

            <ImageView
                android:id="@+id/imageView46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arabesco1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arabesco2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="755dp" />

            <TextView
                android:id="@+id/txtTransacaoaprovada"
                android:layout_width="407dp"
                android:layout_height="99dp"
                android:text="@string/txtconfirmacaorecebimentotransacao"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.64"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.176" />

            <ImageButton
                android:id="@+id/ibtnVoltarT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ECECEC"
                android:src="@drawable/seta"
                android:onClick="telaHome"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04" />

            <TextView
                android:id="@+id/txtBaixarRecibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnbaixarrecibo"
                app:layout_constraintBottom_toBottomOf="@+id/ibtnBaixarRecibo2"
                app:layout_constraintEnd_toEndOf="@+id/ibtnBaixarRecibo2"
                app:layout_constraintHorizontal_bias="0.391"
                app:layout_constraintStart_toStartOf="@+id/ibtnBaixarRecibo2"
                app:layout_constraintTop_toTopOf="@+id/ibtnBaixarRecibo2"
                app:layout_constraintVertical_bias="0.662" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>