<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telacriarconta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF8DD"
    tools:context=".Criarconta" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibtnFacebook2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EDF7DC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.838"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/facebook"
                tools:layout_editor_absoluteY="743dp" />

            <TextView
                android:id="@+id/txtOu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ou"
                android:textColor="#433939"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.826" />

            <TextView
                android:id="@+id/txtContinuarCom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="continuar com"
                android:textColor="#433939"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.879" />

            <ImageButton
                android:id="@+id/ibtnGoogle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EDF7DC"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView67"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/google" />

            <ImageView
                android:id="@+id/imageView66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/criarconta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView67"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/caixacriarconta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.378" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="274dp"
                android:layout_height="55dp"
                android:backgroundTint="#D2ECA7"
                android:text="@string/txtCriarContaCadastrar"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView67"
                app:layout_constraintEnd_toEndOf="@+id/imageView67"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="@+id/imageView67"
                app:layout_constraintTop_toTopOf="@+id/imageView67"
                app:layout_constraintVertical_bias="0.966" />

            <EditText
                android:id="@+id/edtNomeCriarConta"
                android:layout_width="236dp"
                android:layout_height="36dp"
                android:ems="10"
                android:hint="@string/txtCriarContaNome"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView67"
                app:layout_constraintEnd_toEndOf="@+id/imageView67"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="@+id/imageView67"
                app:layout_constraintTop_toTopOf="@+id/imageView67"
                app:layout_constraintVertical_bias="0.088" />

            <EditText
                android:id="@+id/edtDataCriarConta"
                android:layout_width="231dp"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/txtCriarContaData"
                android:inputType="date"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView67"
                app:layout_constraintEnd_toEndOf="@+id/imageView67"
                app:layout_constraintStart_toStartOf="@+id/imageView67"
                app:layout_constraintTop_toTopOf="@+id/imageView67"
                app:layout_constraintVertical_bias="0.222" />

            <EditText
                android:id="@+id/edtCPFCriarConta"
                android:layout_width="231dp"
                android:layout_height="41dp"
                android:ems="10"
                android:hint="@string/txtCriarContaCPF"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView67"
                app:layout_constraintEnd_toEndOf="@+id/imageView67"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="@+id/imageView67"
                app:layout_constraintTop_toTopOf="@+id/imageView67"
                app:layout_constraintVertical_bias="0.354" />

            <EditText
                android:id="@+id/edtTelefoneCriarConta"
                android:layout_width="226dp"
                android:layout_height="35dp"
                android:ems="10"
                android:hint="@string/txtCriarContaTelefone"
                android:inputType="phone"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView67"
                app:layout_constraintEnd_toEndOf="@+id/imageView67"
                app:layout_constraintHorizontal_bias="0.477"
                app:layout_constraintStart_toStartOf="@+id/imageView67"
                app:layout_constraintTop_toTopOf="@+id/imageView67"
                app:layout_constraintVertical_bias="0.511" />

            <EditText
                android:id="@+id/edtEmailCriarConta"
                android:layout_width="219dp"
                android:layout_height="38dp"
                android:ems="10"
                android:hint="@string/txtCriarContaEmail"
                android:inputType="textWebEmailAddress|textEmailAddress"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView67"
                app:layout_constraintEnd_toEndOf="@+id/imageView67"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toStartOf="@+id/imageView67"
                app:layout_constraintTop_toTopOf="@+id/imageView67"
                app:layout_constraintVertical_bias="0.647" />

            <EditText
                android:id="@+id/edtSenhaCriarConta"
                android:layout_width="218dp"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="@string/txtCriarContaSenha"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView67"
                app:layout_constraintEnd_toEndOf="@+id/imageView67"
                app:layout_constraintHorizontal_bias="0.452"
                app:layout_constraintStart_toStartOf="@+id/imageView67"
                app:layout_constraintTop_toTopOf="@+id/imageView67"
                app:layout_constraintVertical_bias="0.791" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>